# JUtils

./: JUtils.sln  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: deploy-JUtils.yml  publish.yml
JUtils/: App.xaml  App.xaml.cs  Controller.cs  JUtils.csproj  MainWindow.xaml  MainWindow.xaml.cs  Settings.cs
JUtils/Properties/: Settings.Designer.cs  Settings.settings
JUtils/Resources/: KeyNamesGER.Designer.cs  KeyNamesGER.resx
JUtils/model/: MicMute.cs
JUtils/model/hotkeys/: GlobalHotkey.cs  HotkeyManager.cs
JUtils/view/: HotkeyPicker.xaml  HotkeyPicker.xaml.cs  SideBar.xaml  SideBar.xaml.cs  TitleBar.xaml  TitleBar.xaml.cs
src/: App.vue  hotkey-manager.ts  hotkey-names.ts  main.ts  snack-bar-type.ts  snake-bar-type.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  error.rs  features.rs  hotkey.rs  main.rs
src-tauri/src/features/: audio_manager.rs  auto_launch.rs  hotkey.rs  mic_mute.rs
src/components/: HelloWorld.vue  Home.vue  HomeComponent.vue  HotkeyComponent.vue  Main.vue  MicMute.vue  MicMuteComponent.vue  Settings.vue  SettingsComponent.vue  SideBar.vue  SideBarComponent.vue  SnackBar.vue  SnakeBar.vue  ToggleComponent.vue
src/components/settings/: AutoStartSettingToggleComponent.vue  SettingsComponent.vue  StartMinimizedToggleComponent.vue
