[package]
name = "app"
version = "0.1.0"
description = "A small utility app mainly meant for my personal use"
authors = ["Jonas Seifried"]
license = ""
repository = "https://github.com/JonasSeifried/JUtils"
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.49"
tauri = { version = "1.5.1", features = [
    "system-tray",
    "global-shortcut-all",
    "shell-open",
] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "^0.4"
global-hotkey = "0.4.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
rodio = "0.17.3"
app_dirs2 = "2.5.5"


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Media_Audio_Endpoints",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
